<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quant"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/priceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:textColor="@color/white"
        android:id="@+id/submit_button"/>
</LinearLayout>