<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/item_txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/user"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/item_txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_txtUsername"
        android:layout_alignStart="@+id/item_txtUsername"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/pass" />

    <TextView
        android:id="@+id/item_txtRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_txtPass"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:text="@string/role"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>