<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/item_txtQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_txtPrice"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:text="@string/quant"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/item_txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_icon"
        android:layout_alignStart="@+id/item_txtProduct"
        android:layout_marginBottom="16dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/item_txtProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/item_txtQuantity"
        android:layout_toEndOf="@+id/item_icon"
        android:layout_marginStart="15dp"
        android:text="@string/product"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>