<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.BottomSheetFragment"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    app:cardBackgroundColor="#adb5e0"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:id="@+id/bottom_sheet_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <View
                android:layout_width="40dp"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_line"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/totalTxt"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="16dp"
                android:text="@string/total"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/totalPrice"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/totalTxt"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/defaultM"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/receiveTxt"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/totalPrice"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:paddingBottom="8dp"
                android:text="@string/receive"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/receivePrice"
                style="@style/TextAppearance.AppCompat.Title"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/receiveTxt"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/totalPrice"
                android:layout_marginEnd="15dp"
                android:textStyle="bold"
                android:autofillHints="" />

            <TextView
                android:id="@+id/changeTxt"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/receivePrice"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="16dp"
                android:text="@string/changeM"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/changePrice"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/changeTxt"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/defaultM"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/changePrice"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/pay" />

        </RelativeLayout>

</androidx.cardview.widget.CardView>